<resources>
    <string name="app_name">Nubank Clone</string>

    <string name="txt_nome_usuario">Olá, Douglas</string>
    <string name="txt_saldo_conta">Conta \n\n R$ 818,95</string>
    <string name="txt_cartoes">Meus Cartões</string>
    <string name="txt_cartao_credito">Cartão de Crédito</string>
    <string name="txt_fatura_atual">Fatura Atual</string>
    <string name="txt_valor_fatura">R$ 325,78</string>
    <string name="txt_limite_cartao">Limíte disponível: R$ 4.174,22</string>
    <string name="txt_parcelar_compras">Parcelar Compras</string>
</resources>