<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.HomeActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple">

            <View
                android:id="@+id/containerCirculo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/container_circulo"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_usuario"
                app:layout_constraintTop_toTopOf="@id/containerCirculo"
                app:layout_constraintStart_toStartOf="@id/containerCirculo"
                app:layout_constraintEnd_toEndOf="@id/containerCirculo"
                app:layout_constraintBottom_toBottomOf="@id/containerCirculo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nome_usuario"
                app:layout_constraintTop_toBottomOf="@id/containerCirculo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="30dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/personAdd"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person_add"
                app:layout_constraintTop_toTopOf="@id/containerCirculo"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="30dp" />

            <ImageView
                android:id="@+id/askQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_question"
                app:layout_constraintTop_toTopOf="@id/containerCirculo"
                app:layout_constraintEnd_toStartOf="@id/personAdd"
                android:layout_marginEnd="30dp" />

            <ImageView
                android:id="@+id/viewValues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_eye"
                app:layout_constraintEnd_toStartOf="@id/askQuestion"
                app:layout_constraintTop_toTopOf="@id/containerCirculo"
                android:layout_marginEnd="30dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_saldo_conta"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_margin="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerIconesPagamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />]

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/light_gray"
            app:cardCornerRadius="10dp"
            android:layout_margin="20dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cartoes"
                    android:layout_margin="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_cartoes"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerProdutos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_gray"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/txt_cartao_credito"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:text="@string/txt_fatura_atual"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/txt_valor_fatura"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:text="@string/txt_limite_cartao"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/txt_parcelar_compras"
            android:layout_margin="20dp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>